done with classification

--- a/Week 3 - Case Study/Language Processing/Introduction to Language Processing.ipynb
+++ b/Week 3 - Case Study/Language Processing/Introduction to Language Processing.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8262cf09-03d7-46a4-b783-58211c0baacc",
    "metadata": {},
    "source": [
     "# Introduction to Language Processing"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6df9e421-e47a-430f-b9b9-536b87982693",
    "metadata": {},
    "source": [
     "Patterns within written text are not the same across all authors or languages.\n",
@@ -32,7 +30,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd46cbc0-2a58-48b8-b416-9914e83e4a8a",
    "metadata": {},
    "source": [
     "The downloaded sample consist of several nested folders.\n",
@@ -46,7 +43,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cba83fd3-f894-4aea-9d95-a9c71403f74a",
    "metadata": {},
    "source": [
     "Our goal is to write a function that given\n",
@@ -56,7 +52,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a642b56d-ddd7-4651-b5d1-5de073f4a851",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +93,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef73327c-0007-459d-a441-c71cf3fc52ee",
    "metadata": {},
    "source": [
     "We have to address the issue of capitalization and also punctuations which may make the same word count as diiferrent words"
@@ -107,7 +101,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5e78bcb5-77c2-497d-9838-924e385e7d97",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5e8760c-6185-4731-b6b3-5a864f2ef533",
    "metadata": {},
    "source": [
     "Now we implement this using pythons inbuilt counter function"
@@ -160,7 +152,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a12dbaf0-0a50-40d5-a0f9-47878a2499f4",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +191,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d4c01a91-26b4-4c6b-b8e7-8c4675d468ab",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +211,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1b9e3715-a43a-4bc5-9b9b-41f43d0d9cf2",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "063c6093-81a8-4250-8146-5ba07d256a4c",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +250,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ca04c71-e4eb-407b-9bb2-413fff756ada",
    "metadata": {},
    "source": [
     "### Reading in a book"
@@ -271,7 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d2572041-a2b5-49e8-a5ce-88067ab1907a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +274,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7a56d1b8-1f3c-4560-a51e-9e7a18f19934",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +294,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73563758-1f16-45c9-b824-f1c46c1311ed",
    "metadata": {},
    "source": [
     "Finding a famous text in a story"
@@ -318,7 +302,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f775181c-d882-42e7-b932-bae519b5113f",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +323,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "af9077df-690d-4a2d-91e9-74b323d6bde1",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +343,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c0805d-8379-49c4-9608-8e6e52eb6dd7",
    "metadata": {},
    "source": [
     "### Computing Word Frequency Statisticsm"
@@ -370,7 +351,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "322a3309-41d2-4455-8f3d-44aaa9b3aede",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +364,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5c3fcc8e-ebbc-46fd-9e99-7658b21e9cbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +373,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ba337abf-6c99-4e8b-a62b-6a99d218df41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +382,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ab788f46-76d6-4327-9fe1-996d4dc7acd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +391,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "adc654cc-572c-4b8f-90d3-c9efb4b2630a",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +410,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4fdadc4-845c-4e6c-b7f8-dc8e15c56b7c",
    "metadata": {},
    "source": [
     "To know how many words there were in total,"
@@ -443,7 +418,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "efc5decc-a268-4040-bd29-2fd926e93117",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +437,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "956045d0-5720-4411-9aab-c1be2af7ee5b",
    "metadata": {},
    "source": [
     "Comparing Romeo and Juliet to its German Version"
@@ -472,7 +445,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "de328732-e50f-44a3-81dc-f8b08fbda199",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +455,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "95f57a63-40c5-46f5-966b-58228e2ff974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +464,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "65518a0c-7f77-4ce9-819e-834b3200d18e",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +484,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "051b6a67-e22f-4ddb-8dfb-01e4acdfcb49",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +503,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8b4b3ad-692f-47ad-a681-8db5358952c2",
    "metadata": {},
    "source": [
     "## Reading multiple files"
@@ -543,7 +511,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fcd27baa-1654-4f48-aaa2-745e0c348c95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +520,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df76679f-506d-452d-b535-fec90bccc6c9",
    "metadata": {},
    "source": [
     "We want to list all directories contained in our book directory"
@@ -562,7 +528,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4e694f77-9c99-41ad-b6f4-df03fd3ba17e",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +652,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "82d2d560-9085-406d-af25-3f21cd895473",
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +671,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e11af79-07c6-4aa8-8055-37044abd3ccf",
    "metadata": {},
    "source": [
     "#### pandas\n",
@@ -717,7 +680,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5cd3a215-4aaa-46e3-933e-885041d53bb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +688,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff8761c7-05b5-40f1-8664-27550ad7162e",
    "metadata": {},
    "source": [
     "creating a table in pandas using pandas dataframe"
@@ -735,7 +696,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d1916922-b452-40cd-99d8-5ca37620e088",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +704,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "681fec6c-1995-4b36-80e4-acb5b64e4c01",
    "metadata": {},
    "source": [
     "#now we add new entries to our table"
@@ -753,7 +712,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "de36171f-8829-4d6c-a77a-f634ecee1c2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +721,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c5e31b3e-db93-4c27-890c-f60375a4c928",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +730,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "27a7c633-3800-4d0e-9c50-181433ab131f",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +790,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5b927405-f0cb-4c73-99e2-61e2e3335787",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +810,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02e183a3-b4f3-43d6-9078-43e9bd46f029",
    "metadata": {},
    "source": [
     "now we will use pandas dataframes to keep track of our books"
@@ -864,7 +818,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c2d65087-be2c-4b90-8ae5-4a4433c109ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +832,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8c67c3b-ba18-4ffc-ab0f-0c189d7a82c2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -887,7 +839,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ea15d3c2-a497-464f-b031-d16876bebfeb",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +965,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7ddb4fbf-3368-4519-8e8f-48e648834e0b",
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1118,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "564dcba0-73df-4613-88ed-ca872a612213",
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1215,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bc43e40b-2cf5-4d3d-8ea2-705e3db5353d",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1312,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ec5dbb54-29c4-4d26-bcd7-d982219e8934",
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1444,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "59c527a3-1ef6-4af8-b3f4-97d8dcfb03b7",
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1540,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0b64ed2e-384c-478b-a6dd-4759cbb49bcc",
    "metadata": {},
    "outputs": [
     {
@@ -1691,7 +1636,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "eac0ba7a-fab4-41ce-aa0a-02237d89b607",
    "metadata": {},
    "outputs": [
     {
@@ -1711,7 +1655,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06bc4767-3d8f-439b-b828-d11290f62aea",
    "metadata": {},
    "source": [
     "## Plotting Book Statistics"
@@ -1719,7 +1662,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a52bb5-4c31-4f3a-a181-18185c960726",
    "metadata": {},
    "source": [
     "accessing different parts of our data"
@@ -1728,7 +1670,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "096221af-1725-423b-84ac-26f050343145",
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1702,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "84232ed9-3fe7-4ed0-b0c4-0d68f7d2bfc3",
    "metadata": {},
    "outputs": [
     {
@@ -1793,7 +1733,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44d75620-8ee9-423a-b207-085842a8d7f6",
    "metadata": {},
    "source": [
     "To make the plot"
@@ -1802,7 +1741,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "88626f75-99d4-41e7-a1f9-e5f39a84be96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1812,7 +1750,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "1e91c88c-ffb6-40d7-bb90-3abd8a04c548",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1783,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "81e1d4a5-3da7-4bdb-a26e-46b7daa6aa03",
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1815,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f0f1e48-db00-4785-98ba-4f35bd677daa",
    "metadata": {},
    "source": [
     "using pandas we can filter and retrieve some specific form of data that matches something"
@@ -1888,7 +1823,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "4fa75b90-5f18-422c-84c7-596fb742edc3",
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +1938,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "eb340860-8b1d-454f-9f1f-d271c2e7295c",
    "metadata": {},
    "outputs": [
     {
@@ -2377,7 +2310,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7b53983-c9cd-4cc2-ba57-8bf8aa5270ca",
    "metadata": {},
    "source": [
     "constructing a plot using different colors for different languages.\n",
@@ -2387,7 +2319,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "63872c76-77fd-429d-9515-8cfa2463a89f",
    "metadata": {},
    "outputs": [
     {
@@ -2425,7 +2356,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c01385e1-368b-415c-8ce2-23eaff4a09a5",
    "metadata": {},
    "source": [
     "We accomplished many tasks in this case study.\n",
@@ -2437,7 +2367,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba87c275-3eed-4397-8768-5e77ed1fb1ab",
    "metadata": {},
    "source": [
     "## Questions "
@@ -2445,7 +2374,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844463b9-d5ab-47f1-a8a3-c146806d4baa",
    "metadata": {},
    "source": [
     "1. stats is a Pandas dataframe as defined in Video 3.2.6. Which of the following options are valid ways to access the column \"length\" in this dataframe? (Select all that apply.)\n",
@@ -2463,7 +2391,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b9c0fd-4cf9-458e-a761-328f9eac60a7",
    "metadata": {},
    "source": [
     "stats is a Pandas dataframe as defined in Video 3.2.6. How can you select only the rows where the language is French?\n",
@@ -2480,7 +2407,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fb8e2f4-b57b-4a0b-be12-e8c5595aa34b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2488,7 +2414,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2502,7 +2428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
